Added init page with character selection

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
     <div class="wall-left"></div>
     <div class="wall-right"></div>
   </div>
+
+  <div class="initpage">
+    <div class="title">
+        SELECT YOUR FIGHTERS
+    </div>
+    <div class="player"></div>
+    <div class="parent"></div>
+
+    <script src="js/index.js"></script>
+  </div>
+
   <script src="js/main.js" type="module"></script>
 </body>
 
