--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="player"></div>
     <div class="parent"></div>
 
-    <script src="js/index.js"></script>
+    <script src="js/initSelection.js" type="module"></script>
   </div>
 
   <script src="js/main.js" type="module"></script>
