changes connected with renaming playerSelection.js

--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
     <div class="player"></div>
     <div class="parent"></div>
 
-    <script src="js/initSelection.js" type="module"></script>
+    <script src="js/playerSelection.js" type="module"></script>
   </div>
 
   <script src="js/main.js" type="module"></script>
