Created enemy selection animation

--- a/main.html
+++ b/main.html
@@ -63,6 +63,7 @@
         SELECT YOUR FIGHTERS
     </div>
     <div class="player"></div>
+    <div class="enemy"></div>
     <div class="parent"></div>
 
     <script src="js/playerSelection.js" type="module"></script>
